Ensure popups can't be moved off-screen

BUG=681511
R=mkwst@chromium.org

Change-Id: I351b28a09bfe09e5045ada5e228f8f0958a9eccb
Reviewed-on: https://chromium-review.googlesource.com/700264
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Mike West <mkwst@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506771}
Former-commit-id: 645830fb7e029ee6d8debeb6902952a2158485e4