third_party/WebKit/Source/core/page/ChromeClient.cpp
@@ -54,20 +54,29 @@ void ChromeClient::SetWindowRectWithAdjustment(const IntRect& pending_rect,
   IntRect window = pending_rect;
 
   IntSize minimum_size = MinimumWindowSize();
+  IntSize size_for_constraining_move = minimum_size;
   // Let size 0 pass through, since that indicates default size, not minimum
   // size.
-  if (window.Width())
+  if (window.Width()) {
     window.SetWidth(std::min(std::max(minimum_size.Width(), window.Width()),
                              screen.Width()));
-  if (window.Height())
+    size_for_constraining_move.SetWidth(window.Width());
+  }
+  if (window.Height()) {
     window.SetHeight(std::min(std::max(minimum_size.Height(), window.Height()),
                               screen.Height()));
+    size_for_constraining_move.SetHeight(window.Height());
+  }
 
   // Constrain the window position within the valid screen area.
-  window.SetX(std::max(screen.X(),
-                       std::min(window.X(), screen.MaxX() - window.Width())));
-  window.SetY(std::max(screen.Y(),
-                       std::min(window.Y(), screen.MaxY() - window.Height())));
+  window.SetX(
+      std::max(screen.X(),
+               std::min(window.X(),
+                        screen.MaxX() - size_for_constraining_move.Width())));
+  window.SetY(
+      std::max(screen.Y(),
+               std::min(window.Y(),
+                        screen.MaxY() - size_for_constraining_move.Height())));
   SetWindowRect(window, frame);
 }
 
